Revision history for tesla-charge

1.02 UNREL
    - We now use WiFiManager; if we can't connect to a known wireless network,
      we'll start the controllers in AP mode ('TeslaInterface' and
      'TeslaController') so that a new wifi config can be uploaded
    - Added SSL support
    - Backend API URL is now configured through the WiFi configuration captive
      portal. ie, it's no longer hard-coded
    - Added token authentication (routes now are get/post); added 'tokens'
      section to config file
    - Added complete documentation
    - Add wifi config pins; if held HIGH on reboot, we'll enter config AP
      captive portal mode
    - Auth tokens now configurable through the captive portal
    - IP access now based on IP prefixes
    - config_load() and security() checks now done in a before hook instead of
      each individual route
    - Moved config file tokens to system config section
    - Created bin/ and config/ and moved relevant files to those new dirs
    - Added new bin/tesla-charge binary, allows running the service as a daemon
    - On failed security check, set error and halt with the standard JSON string
    - Auth and API errors printed to STDOUT now have a timestamp
    - Changed from IP based auth to host based; We now allow DNS names and we
      resolve them internally, and allow leaving off the IP prefix

1.01 2022-04-08
    - Separated code into two separate controllers (Controller - controls the
      LED strip, Interface - does everything else) which communicate via
      ESP-NOW protocol

1.00 2022-04-01
    - Removed reliance on Tim Dorssers TeslaPy Python distribution thanks to
      my new Tesla::Vehicle and Tesla::API distributions
    - Renamed web.pl to app.psgi
    - Removed script_path directive from config file