@@ -6,12 +6,12 @@
 
 #define STEPPER_FULLSTEP 4
 
-#define PIN_RESET       5   // D1
-#define PIN_ACTIVATE    4   // D2
-#define PIN_STEPPER_IN1 2   // D4
-#define PIN_STEPPER_IN2 12  // D6
-#define PIN_STEPPER_IN3 13  // D7
-#define PIN_STEPPER_IN4 14  // D5
+#define RESET_PIN       5   // D1
+#define ACTIVATE_PIN    4   // D2
+#define STEPPER_IN1_PIN 2   // D4
+#define STEPPER_IN2_PIN 12  // D6
+#define STEPPER_IN3_PIN 13  // D7
+#define STEPPER_IN4_PIN 14  // D5
 
 #define MAX_SPEED       4000.0
 #define SET_SPEED       4000
